# j-pet-gate-tools

./: .gitignore  Geometry_strips_L50.mac  README.md
.github/workflows/: ci.yml
Phantoms/inveon microPET/: GateAttenuationCorrectionActor.cc  GateAttenuationCorrectionActor.hh  GateAttenuationCorrectionActorMessenger.cc  GateAttenuationCorrectionActorMessenger.hh  README_NEMA_Phantoms.rtf  Readme_root2lst_multi.txt  gate_batch_splitter.pl  phantom_nema_image_quality.mac  phantom_nema_monkey_scatter.mac  phantom_nema_mouse_scatter.mac  phantom_nema_point_source.mac  phantom_nema_rat_scatter.mac  root2lst_multi.cpp  source_nema_image_quality.mac  source_nema_monkey_scatter.mac  source_nema_mouse_scatter.mac  source_nema_point_source.mac  source_nema_rat_scatter.mac
assets/: geometry.tif
detector_splitter/: splitter.py
detector_splitter/templates/: Geometry_strips_L50.temp  JPET_500mm_Clinder_sys.temp
example_simulations/: GateMaterials.db  Visualisation.mac
example_simulations/digitizers/: Digitizer.mac
example_simulations/sources/: Source_Point_Gamma.mac
examples/: README.md
examples/goja/: CMakeLists.txt  Constants.h  EventAnalysis.cpp  EventAnalysis.h  Hit.cpp  Hit.h  Hits.C  Hits.h  README.md  goja.cpp  goja_manager.py  manage_analysis.py
examples/python_scripts/: README.md  analyze_coincidences.py  analyze_sumulations.py  calculate_necr.py  calculate_sensitivity_and_sensitivity_profiles.py  calculate_sf_and_necr.py  generate_simulations.py  nema_common.py  plot_coincidences.py  plot_sensitivity_and_sensitivity_profiles.py  plot_sf_and_necr.py  strips_centers_djpet-total-body.txt  (+1 more)
goja/: CMakeLists.txt  Common.h  Constants.h  EventAnalysis.cpp  EventAnalysis.h  Hit.cpp  Hit.h  Hits.C  Hits.h  README.md  goja.cpp  goja2gate.py  goja_manager.py  verify_gate_results.py  verify_goja_results.py
goja-tools/: README.md
goja-tools/smear-events/: CMakeLists.txt  README.md
goja-tools/smear-events/src/: ParametersReader.h  SmearEvents.cpp  SmearEvents.h
jplot/: coincidences.txt  jplot.py
root_reader/: main.py
(+95 files in other folders)
